--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 <h3>Company Info</h3>
                 <ul>
                     <li><a href="https://www.toyota.com/" target="_blank"> All Products</a></li>
-                    <li><a href="https://www.toyota.com/dealers/">Find Dealers</a></li>
-                    <li><a href="https://www.toyota.com/local-specials/">Local special</a></li>
-                    <li><a href="https://www.toyota.com/rav4/accessories/exterior">Accessories</a></li>
+                    <li><a href="https://www.toyota.com/dealers/" target="_blank">Find Dealers</a></li>
+                    <li><a href="https://www.toyota.com/local-specials/" target="_blank">Local special</a></li>
+                    <li><a href="https://www.toyota.com/rav4/accessories/exterior" target="_blank">Accessories</a></li>
                 </ul>
             </div>
             <div>
